fixed footer being cutoff

--- a/frontend/src/components/Elements/Footer/Footer.module.css
+++ b/frontend/src/components/Elements/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 190px;
 
-    margin-top: 6%;
+    margin-top: 4%;
     padding: 0 15px 0 15px;
 
     background-color: rgb(23, 43, 77);
